--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
     "expo": "~49.0.13",
@@ -15,7 +16,11 @@
     "react-native": "0.72.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native/eslint-config": "^0.73.1",
+    "eslint": "^8.50.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "prettier": "^3.0.3"
   },
   "private": true
 }
