--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@types/react": "~18.2.14",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-paper": "^5.10.6",
-    "react-native-safe-area-context": "^4.7.2"
+    "react-native-safe-area-context": "^4.7.2",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
