--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.72.5",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "^4.7.2",
+    "styled-components": "^6.0.8",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
