--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.3",
+    "@expo-google-fonts/oswald": "^0.2.3",
     "@types/react": "~18.2.14",
     "expo": "~49.0.13",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "^4.7.2",
+    "react-native-svg": "13.9.0",
     "styled-components": "^6.0.8",
     "typescript": "^5.1.3"
   },
