added flat list, fixed eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,13 @@
 {
     "extends": "@react-native",
     "rules": {
-        "quotes": [2, "double", { "avoidEscape": true }]
+        "quotes": [2, "double", { "avoidEscape": true }],
+        "prettier/prettier": [
+          "error",
+          {
+            "endOfLine": "auto"
+          }
+        ]
       }
+     
 }
