--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo-google-fonts/oswald": "^0.2.3",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/native": "^6.1.8",
     "@types/react": "~18.2.14",
     "expo": "~49.0.13",
     "expo-font": "~11.4.0",
@@ -19,7 +21,8 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-paper": "^5.10.6",
-    "react-native-safe-area-context": "^4.7.2",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "styled-components": "^6.0.8",
     "typescript": "^5.1.3"
