--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo-google-fonts/oswald": "^0.2.3",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.18",
     "@types/react": "~18.2.14",
     "camelize": "^1.0.1",
     "expo": "~49.0.13",
@@ -21,6 +22,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-gesture-handler": "^2.13.1",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
